make various additions -fix expenditure list scroll graphical error overflowing from the full card -add drop down input for generic filtering types -refactor current expenditure_list code, give variable names closer to appropriate naming conventions

--- a/static/custom.css
+++ b/static/custom.css
@@ -151,7 +151,7 @@ input[type=password] {
 
 .mainTbody{
   display:block;
-  height: 700px;
+  max-height: 625px;
   overflow-y:auto;
 }
 
@@ -173,5 +173,6 @@ input[type=password] {
 .dropdown-menu {
   background-color: rgb(255, 255, 255, 0.5);
 }
+
 
 
